improvements to guides across all frameworks, new naming scheme

--- a/docs/upgrade-guides/core-2/backend.mdx
+++ b/docs/upgrade-guides/core-2/backend.mdx
@@ -1,29 +1,34 @@
 ---
-title: "Upgrading Backend from v4 to v5"
-description: "Learn how to upgrade Clerk's Backend SDK from v4 to v5."
+title: "Upgrading Backend to Core 2"
+description: "Learn how to upgrade Clerk's Backend SDK to the latest version."
 ---
 
-# Upgrading `@clerk/backend` from v4 to v5
+# Upgrading `@clerk/backend` to Core 2
 
-Version 5 of the Backend SDK ships with a variety of smaller DX improvements and housekeeping items. Each of the potentially breaking changes are detailed in this guide, below.
+Clerk's Core 2 release includes a new major version of the Backend SDK, v1. This new version ships with a variety of smaller DX improvements and housekeeping items. Each of the potentially breaking changes are detailed in this guide, below.
 
-By the end of this guide, you’ll have successfully upgraded your Backend project to use `@clerk/backend` v5. You’ll learn how to update your dependencies, resolve breaking changes, and find deprecations. Step-by-step instructions will lead you through the process.
+By the end of this guide, you’ll have successfully upgraded your Backend project to use `@clerk/backend` v1. You’ll learn how to update your dependencies, resolve breaking changes, and find deprecations. Step-by-step instructions will lead you through the process.
 
 ## Preparing to upgrade
 
-Before uprading, it's highly recommended that you update your Clerk SDKs to the latest v4 version. Some changes required for v5 can be applied incrementally to the latest v4, which should contribute to a smoother upgrading experience.
+Before uprading, it's highly recommended that you update your Clerk SDKs to the latest Core 1 version (`npm i @clerk/backend@core-1`). Some changes required for Core 2 can be applied incrementally to the latest v1 release, which should contribute to a smoother upgrading experience.
 
-After updating, look out for deprecation messages in your terminal and browser console. By resolving these deprecations you'll be able to skip many breaking changes for v5.
+After updating, look out for deprecation messages in your terminal and browser console. By resolving these deprecations you'll be able to skip many breaking changes from Core 2.
+
+<Callout>
+  Note that Core 2 is currently in beta, while we field feedback and ensure stability. Deploying beta versions to
+  production is not recommended and should be done at your own risk.
+</Callout>
 
 Additionally, some of the minumum version requirements for some base dependencies have been updated such that versions that are no longer supported or are at end-of-life are no longer guaranteed to work correctly with Clerk.
 
 **Updating Node.js**
 
-You need to have Node.js `18.17.0` or later installed. Last year, Node.js 16 entered EOL (End of life) status so it's time to bump the required version for `@clerk/nextjs`, too. You can check your Node.js version by running `node -v` in your terminal. Learn more about how to [update and install Node.js](https://nodejs.org/en/learn/getting-started/how-to-install-nodejs).
+You need to have Node.js `18.17.0` or later installed. Last year, Node.js 16 entered EOL (End of life) status, so support for this version has been removed across Clerk SDKs. You can check your Node.js version by running `node -v` in your terminal. Learn more about how to [update and install Node.js](https://nodejs.org/en/learn/getting-started/how-to-install-nodejs).
 
-## Updating to v5
+## Updating to Core 2 Beta
 
-Whenever you feel ready, go ahead and install the latest beta version of any Clerk SDKs you are using. Make sure that you are prepared to patch some breaking changes before your app will work properly, however. Some examples for how to unstall commonly used SDKs are below:
+Whenever you feel ready, go ahead and install the latest beta version of any Clerk SDKs you are using. Make sure that you are prepared to patch some breaking changes before your app will work properly, however. The commands below demonstrate how to install the latest beta.
 
 <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
     ```bash filename="terminal"
@@ -42,7 +47,7 @@ Whenever you feel ready, go ahead and install the latest beta version of any Cle
 
 ## CLI Upgrade Helper
 
-As of this major version Clerk provides a `@clerk/upgrade` CLI tool that you can use to ease the upgrade. A CLI prompt will ask you a couple of questions, it will scan your codebase, and afterwards you'll get a list of changes you'll need to apply to your project, as well as the locations where they need to be applied. This should catch the vast majority of the changes needed for a successful upgrade to v5, and can save a lot of time reading through changes to things that aren't actually in your project.
+As of this major version Clerk provides a `@clerk/upgrade` CLI tool that you can use to ease the upgrade. A CLI prompt will ask you a couple of questions, it will scan your codebase, and afterwards you'll get a list of changes you'll need to apply to your project, as well as the locations where they need to be applied. This should catch the vast majority of the changes needed for a successful upgrade, and can save a lot of time reading through changes to things that aren't actually in your project.
 
 To run the CLI tool, navigate to your project and run it in the terminal:
 
@@ -192,14 +197,14 @@ The `httpOptions` parameter was removed from the internal `buildRequest` functio
 The internal change looks like this:
 
 ```diff
-- const r = buildRequest({ httpsOptions: { headers: {} }})
+- const r = buildRequest({ httpOptions: { headers: {} }})
 + const request = buildRequest()
 + request({ headerParams: {} })
 ```
 
 ### Removed: `orgs` claim on JWT
 
-In v4 of Clerk's SDKs, if you decode the session token that Clerk returns from the server, you'll currently find an `orgs` claim on it. It lists all the orgs associated with the given user. In v5 Clerk returns the `org_id`, `org_slug`, and `org_role` of the **active** organization.
+In the previous version of Clerk's SDKs, if you decode the session token that Clerk returns from the server, you'll currently find an `orgs` claim on it. It lists all the orgs associated with the given user. Now, Clerk returns the `org_id`, `org_slug`, and `org_role` of the **active** organization.
 
 The `orgs` claim was part of the `JwtPayload`. Here are a few examples of where the `JwtPayload` could be found.
 
@@ -248,7 +253,7 @@ The `orgs` claim was part of the `JwtPayload`. Here are a few examples of where 
 
 If you would like to have your JWT return all of the user's organizations, you can create a [custom JWT template](/docs/backend-requests/making/jwt-templates) in your dashboard. Add `{ "orgs": "user.organizations" }` to it.
 
-#### Changes to pagination arguments for some functions
+### Changes to pagination arguments for some functions
 
 There were some changes made to pagination-related arguments passed into functions, in order to make it more clear how to control paginated results. See each function impacted by these changes below:
 
@@ -351,11 +356,11 @@ There were some changes made to pagination-related arguments passed into functio
   </AccordionPanel>
 </Accordion>
 
-#### Changes to some function return signatures
+### Changes to some function return signatures
 
 There have been changes to return signatures for some functions. Since Clerk's API responses are paginated, the `totalCount` property is helpful in determining the total number of items in the response easily. This change also aligns the response shape with what is returned from the Clerk backend API. Each impacted function is listed below, along with code examples:
 
-<Accordion titles={["<code>Users.getOrganizationInvitationList</code> return signature changed", "<code>Organizations.getOrganizationInvitationList</code> return type changed", "<code>User.getOrganizationMembershipList()</code> return type changed", "<code>Users.getOrganizationList</code> return signature changed", "<code>Organization.getOrganizationList()</code> return type changed", "<code>Users.getOrganizationMembershipList</code> return signature changed"]}>
+<Accordion titles={["<code>Users.getOrganizationInvitationList</code> return signature changed", "<code>Organizations.getOrganizationInvitationList</code> return type changed", "<code>User.getOrganizationMembershipList</code> return type changed", "<code>Users.getOrganizationList</code> return signature changed", "<code>Organization.getOrganizationList</code> return type changed", "<code>Users.getOrganizationMembershipList</code> return signature changed"]}>
   <AccordionPanel>    
     The response payload of `Users.getOrganizationInvitationList` was changed as part of the v5 release. Rather than directly returning ` data`, the return signature is now `{ data, totalCount }`. Since backend API responses are paginated, the `totalCount` property is helpful in determining the total number of items in the response easily, and this change in the backend SDK aligns the response shape with what the backend API returns directly.
     
@@ -453,19 +458,31 @@ There are a number of Clerk primitives that contain images, and previously they 
   </AccordionPanel>
 </Accordion>
 
-## Deprecation removals & housekeeping
+### Deprecation removals & housekeeping
 
 As part of this major version, a number of previously deprecated props, arugments, methods, etc have been removed. Additionally there have been some changes to things that are only used internally, or only used very rarely. It's highly unlikely that any given app will encounter any of these items, but they are all breaking changes, so they have all been documented below.
 
 <Callout type='info'>
-  For this section more than any other one, please use the CLI upgrade tool (`npx @clerk/upgrade`). There are a lot of
-  changes, each of which are very unlikely to appear in your codebase, that would take a very long time to look for
-  manually.
+  For this section more than any other one, please use the CLI upgrade tool (`npx @clerk/upgrade`). Changes in this
+  section are very unlikely to appear in your codebase, the tool will save time looking for them.
 </Callout>
 
-### Deprecation removals
+#### Deprecation removals
 
-<Accordion titles={["<code>frontendApi</code> -&gt; <code>publishableKey</code> as param to createClerkClient", "<code>apiKey</code> -&gt; <code>secretKey</code> as param to createClerkClient"]}>
+<Accordion titles={["<code>User.update({ password: &#39;x&#39; })</code> -&gt; <code>User.updatePassword(&#39;x&#39;)</code>", "<code>frontendApi</code> -&gt; <code>publishableKey</code> as param to createClerkClient", "<code>apiKey</code> -&gt; <code>secretKey</code> as param to createClerkClient"]}>
+  <AccordionPanel>    
+    If you are updating a user's password via the [`User.update` method](https://clerk.com/docs/references/javascript/user/user#update), it must be changed to [`User.updatePassword`](https://clerk.com/docs/references/javascript/user/password-management#update-password) instead. This method will require the current password as well as the desired new password. We made this update to improve the security of password changes. Example below:
+    
+    ```diff
+    - user.update({ password: 'foo' });
+    
+    + user.updatePassword({
+    +   currentPassword: 'bar',
+    +   newPassword: 'foo',
+    +   signOutOfOtherSessions: true,
+    + });
+    ```
+  </AccordionPanel>
   <AccordionPanel>    
     The `frontendApi` argument passed to `createClerkClient` must be changed to `publishableKey`. Note that the values of the two keys are different, so both keys and values need to be changed. You can find your application's publishable key in the Clerk dashboard. Also note that the import value has changed for creating a new Clerk client, which will be addressed by a separate line item if relevant to your codebase.
     
@@ -496,19 +513,11 @@ As part of this major version, a number of previously deprecated props, arugment
   </AccordionPanel>
 </Accordion>
 
-### Other Breaking Changes
+#### Other Breaking Changes
 
-<Accordion titles={["<code>API_URL</code> value has changed", "<code>request</code> separated from <code>options</code> as params to <code>authenticateRequest</code>", "<code>Clerk</code> -&gt; <code>createClerkClient</code>", "<code>clockSkewInSeconds</code> -&gt; <code>clockSkewInMs</code>", "<code>pkgVersion</code> -&gt; <code>clerkJSVersion</code>", "<code>clerkClient.__unstable_options</code> removed", "<code>httpOptions</code> parameter removed", "<code>createEmail</code> import removed", "<code>MembershipRole</code> type replaced by <code>OrganizationCustomRoleKey</code> type", "<code>buildRequestUrl</code> import removed"]}>
+<Accordion titles={["<code>API_URL</code> value has changed", "<code>Clerk</code> -&gt; <code>createClerkClient</code>", "<code>pkgVersion</code> -&gt; <code>clerkJSVersion</code>", "<code>clerkClient.__unstable_options</code> removed", "<code>createEmail</code> import removed", "<code>MembershipRole</code> type replaced by <code>OrganizationCustomRoleKey</code> type", "<code>buildRequestUrl</code> import removed"]}>
   <AccordionPanel>    
     The value of this export has changed from `https://api.clerk.dev` to `https://api.clerk.com`. If you were relying on the text content of this value not changing, you may need to make adjustments.
-  </AccordionPanel>
-  <AccordionPanel>    
-    There has been a change to the way the params of the `authenticateRequest` function are structured. The `request` param, formerly included in an `options` object, has been moved to stand on its own as the first param to the function, while the `options` object remains as the second param. Example below:
-    
-    ```diff
-    - clerkClient.authenticateRequest({ ...opts, request })
-    + clerkClient.authenticateRequest(request, { ...opts })
-    ```
   </AccordionPanel>
   <AccordionPanel>    
     The top level `Clerk` import was renamed to `createClerkClient`. This is just a name change and can be treated as a text replacement, no changes to the params or return types.
@@ -520,13 +529,6 @@ As part of this major version, a number of previously deprecated props, arugment
     // after
     import { createClerkClient } from '@clerk/backend';
     ```
-  </AccordionPanel>
-  <AccordionPanel>    
-    The `clockSkewInSeconds` option has been renamed to `clockSkewInMs` in order to accurately reflect that its value is expected to be in milliseconds rather than seconds. The value does not need to change here, only the name. This change affects the following imports:
-    
-    - `verifyJwt`
-    - `verifyToken`
-    - `Clerk.authenticateRequest`
   </AccordionPanel>
   <AccordionPanel>    
     The `pkgVersion` parameter was removed from the `loadInterstitialFromLocal`, `loadInterstitialFromBAPI`, and `buildPublicInterstitialUrl` functions. Use `clerkJSVersion` instead. Example:
@@ -546,17 +548,6 @@ As part of this major version, a number of previously deprecated props, arugment
     
     - clerkClient.__unstable_options.secretKey = "new"
     + const newClerkClient = createClerkClient({ secretKey: "new" })
-    ```
-  </AccordionPanel>
-  <AccordionPanel>    
-    The `httpOptions` parameter was removed from the internal `buildRequest` function but it is used by most public facing APIs. Hence you were able to pass `httpOptions` to some functions which is not possible anymore. If you're currently relying on this functionality and wish to update, please reach out to Clerk's support.
-    
-    The internal change looks like this:
-    
-    ```diff
-    - const r = buildRequest({ httpsOptions: { headers: {} }})
-    + const request = buildRequest()
-    + request({ headerParams: {} })
     ```
   </AccordionPanel>
   <AccordionPanel>    
