--- a/docs/upgrade-guides/core-2/javascript.mdx
+++ b/docs/upgrade-guides/core-2/javascript.mdx
@@ -1,25 +1,30 @@
 ---
-title: "Upgrading Javascript from v4 to v5"
-description: "Learn how to upgrade Clerk's Javascript SDK from v4 to v5."
+title: "Upgrading Javascript to Core 2"
+description: "Learn how to upgrade Clerk's Javascript SDK to the latest version."
 ---
 
-# Upgrading `@clerk/clerk-js` from v4 to v5
+# Upgrading `@clerk/clerk-js` to Core 2
 
-Version 5 of the Javascript SDK ships with an improved design and UX for its built-in components, no "flash of white page" when authenticating, and a variety of smaller DX improvements and housekeeping items. Each of the potentially breaking changes are detailed in this guide, below.
+Clerk's Core 2 release includes a new major version of the Javascript SDK, v5. This new version ships with an improved design and UX for its built-in components, no "flash of white page" when authenticating, and a variety of smaller DX improvements and housekeeping items. Each of the potentially breaking changes are detailed in this guide, below.
 
-By the end of this guide, you’ll have successfully upgraded your JS project to use `@clerk/clerk-js` v5. You’ll learn how to update your dependencies, resolve breaking changes, and find deprecations. Step-by-step instructions will lead you through the process.
+By the end of this guide, you'll have successfully upgraded your JS project to use `@clerk/clerk-js` v5. You'll learn how to update your dependencies, resolve breaking changes, and find deprecations. Step-by-step instructions will lead you through the process.
 
 ## Preparing to upgrade
 
-Before uprading, it's highly recommended that you update your Clerk SDKs to the latest v4 version. Some changes required for v5 can be applied incrementally to the latest v4, which should contribute to a smoother upgrading experience.
+Before uprading, it's highly recommended that you update your Clerk SDKs to the latest Core 1 version (`npm i @clerk/clerk-js@core-1`). Some changes required for Core 2 can be applied incrementally to the latest v5 release, which should contribute to a smoother upgrading experience.
 
-After updating, look out for deprecation messages in your terminal and browser console. By resolving these deprecations you'll be able to skip many breaking changes for v5.
+After updating, look out for deprecation messages in your terminal and browser console. By resolving these deprecations you'll be able to skip many breaking changes from Core 2.
+
+<Callout>
+  Note that Core 2 is currently in beta, while we field feedback and ensure stability. Deploying beta versions to
+  production is not recommended and should be done at your own risk.
+</Callout>
 
 Additionally, some of the minumum version requirements for some base dependencies have been updated such that versions that are no longer supported or are at end-of-life are no longer guaranteed to work correctly with Clerk.
 
-## Updating to v5
+## Updating to Core 2 Beta
 
-Whenever you feel ready, go ahead and install the latest beta version of any Clerk SDKs you are using. Make sure that you are prepared to patch some breaking changes before your app will work properly, however. Some examples for how to unstall commonly used SDKs are below:
+Whenever you feel ready, go ahead and install the latest beta version of any Clerk SDKs you are using. Make sure that you are prepared to patch some breaking changes before your app will work properly, however. The commands below demonstrate how to install the latest beta.
 
 <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
     ```bash filename="terminal"
@@ -38,7 +43,7 @@ Whenever you feel ready, go ahead and install the latest beta version of any Cle
 
 ## CLI Upgrade Helper
 
-As of this major version Clerk provides a `@clerk/upgrade` CLI tool that you can use to ease the upgrade. A CLI prompt will ask you a couple of questions, it will scan your codebase, and afterwards you'll get a list of changes you'll need to apply to your project, as well as the locations where they need to be applied. This should catch the vast majority of the changes needed for a successful upgrade to v5, and can save a lot of time reading through changes to things that aren't actually in your project.
+As of this major version Clerk provides a `@clerk/upgrade` CLI tool that you can use to ease the upgrade. A CLI prompt will ask you a couple of questions, it will scan your codebase, and afterwards you'll get a list of changes you'll need to apply to your project, as well as the locations where they need to be applied. This should catch the vast majority of the changes needed for a successful upgrade, and can save a lot of time reading through changes to things that aren't actually in your project.
 
 To run the CLI tool, navigate to your project and run it in the terminal:
 
@@ -67,9 +72,9 @@ The new version ships with improved design and UX across all of Clerk's [UI comp
 
 [More detail on these changes &raquo;](/components-redesigned)
 
-## After sign up/in/out URL handling
+### After sign up/in/out URL handling
 
-Defining redirect URLs for after sign up, in, and/or out via the Clerk dashboard has been removed in v5. In your Clerk dashboard, under "paths", there is a section called "Component paths", where URLs could be defined that had a deprecation warning. In v5, this functionality has been removed, and specifying redirect paths via the dashboard will no longer work. If you need to pass a redirect URL for after sign in/up/out, there are [a few different ways this can be done](https://clerk.com/docs/account-portal/custom-redirects), from environment variables to middleware to supplying them directly to the relevant components.
+Defining redirect URLs for after sign up, in, and/or out via the Clerk dashboard has been removed in Core 2. In your Clerk dashboard, under "paths", there is a section called "Component paths", where URLs could be defined that had a deprecation warning. In Core 2, this functionality has been removed, and specifying redirect paths via the dashboard will no longer work. If you need to pass a redirect URL for after sign in/up/out, there are [a few different ways this can be done](https://clerk.com/docs/account-portal/custom-redirects), from environment variables to middleware to supplying them directly to the relevant components.
 
 As part of this change, the default URL for each of these props has been set to `/`, so if you are passing `/` explicitly to any one of the above props, that line is no longer necessary and can be removed.
 
@@ -80,7 +85,7 @@ As part of this change, the default URL for each of these props has been set to 
 
 ### Removed: `orgs` claim on JWT
 
-In v4 of Clerk's SDKs, if you decode the session token that Clerk returns from the server, you'll currently find an `orgs` claim on it. It lists all the orgs associated with the given user. In v5 Clerk returns the `org_id`, `org_slug`, and `org_role` of the **active** organization.
+In the previous version of Clerk's SDKs, if you decode the session token that Clerk returns from the server, you'll currently find an `orgs` claim on it. It lists all the orgs associated with the given user. Now, Clerk returns the `org_id`, `org_slug`, and `org_role` of the **active** organization.
 
 The `orgs` claim was part of the `JwtPayload`. Here are a few examples of where the `JwtPayload` could be found.
 
@@ -158,28 +163,7 @@ If you don't define the `path` prop an error will be thrown. Of course, you can 
 <OrganizationProfile routing="virtual" />
 ```
 
-However, there are two exceptions to this behavior. If you're using `@clerk/nextjs` or `@clerk/remix`, you can set environment variables for `<SignIn />` and `<SignUp />`.
 
-<CodeBlockTabs options={["Next.js", "Remix"]}>
-```env filename=".env.local"
-NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
-NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
-```
-
-```env filename=".env"
-CLERK_SIGN_IN_URL=/sign-in
-CLERK_SIGN_UP_URL=/sign-up
-```
-
-</CodeBlockTabs>
-
-**Only** if you're using one of these two frameworks and defined both environment variables, you're able to use the `<SignIn />` and `<SignUp />` components without any props.
-
-```jsx
-// Only works for Next.js / Remix when environment variables are set
-<SignIn />
-<SignUp />
-```
 
 ### Image URL Name Consolidation
 
@@ -200,7 +184,7 @@ There are a number of Clerk primitives that contain images, and previously they 
   </AccordionPanel>
 </Accordion>
 
-#### Changes to pagination arguments for some functions
+### Changes to pagination arguments for some functions
 
 There were some changes made to pagination-related arguments passed into functions, in order to make it more clear how to control paginated results. See each function impacted by these changes below:
 
@@ -303,11 +287,11 @@ There were some changes made to pagination-related arguments passed into functio
   </AccordionPanel>
 </Accordion>
 
-#### Changes to some function return signatures
+### Changes to some function return signatures
 
 There have been changes to return signatures for some functions. Since Clerk's API responses are paginated, the `totalCount` property is helpful in determining the total number of items in the response easily. This change also aligns the response shape with what is returned from the Clerk backend API. Each impacted function is listed below, along with code examples:
 
-<Accordion titles={["<code>Users.getOrganizationInvitationList</code> return signature changed", "<code>Organizations.getOrganizationInvitationList</code> return type changed", "<code>User.getOrganizationMembershipList()</code> return type changed", "<code>Users.getOrganizationList</code> return signature changed", "<code>Organization.getOrganizationList()</code> return type changed"]}>
+<Accordion titles={["<code>Users.getOrganizationInvitationList</code> return signature changed", "<code>Organizations.getOrganizationInvitationList</code> return type changed", "<code>User.getOrganizationMembershipList</code> return type changed", "<code>Users.getOrganizationList</code> return signature changed", "<code>Organization.getOrganizationList</code> return type changed"]}>
   <AccordionPanel>    
     The response payload of `Users.getOrganizationInvitationList` was changed as part of the v5 release. Rather than directly returning ` data`, the return signature is now `{ data, totalCount }`. Since backend API responses are paginated, the `totalCount` property is helpful in determining the total number of items in the response easily, and this change in the backend SDK aligns the response shape with what the backend API returns directly.
     
@@ -364,19 +348,18 @@ There have been changes to return signatures for some functions. Since Clerk's A
   </AccordionPanel>
 </Accordion>
 
-## Deprecation removals & housekeeping
+### Deprecation removals & housekeeping
 
 As part of this major version, a number of previously deprecated props, arugments, methods, etc have been removed. Additionally there have been some changes to things that are only used internally, or only used very rarely. It's highly unlikely that any given app will encounter any of these items, but they are all breaking changes, so they have all been documented below.
 
 <Callout type='info'>
-  For this section more than any other one, please use the CLI upgrade tool (`npx @clerk/upgrade`). There are a lot of
-  changes, each of which are very unlikely to appear in your codebase, that would take a very long time to look for
-  manually.
+  For this section more than any other one, please use the CLI upgrade tool (`npx @clerk/upgrade`). Changes in this
+  section are very unlikely to appear in your codebase, the tool will save time looking for them.
 </Callout>
 
-### Deprecation removals
+#### Deprecation removals
 
-<Accordion titles={["<code>User.update({ password: &#39;x&#39; })</code> -&gt; <code>User.updatePassword(&#39;x&#39;)</code>", "<code>Clerk.experimental_canUseCaptcha</code> property removed", "<code>Clerk.experimental_captchaURL</code> property removed", "<code>Clerk.experimental_captchaSiteKey</code> property removed", "<code>Clerk.__unstable__invitationUpdate</code> removed", "<code>Clerk.__unstable__membershipUpdate</code> removed", "<code>redirect_url</code> -&gt; <code>redirectUrl</code> as param of <code>User.createExternalAccount</code>", "<code>generatedSignature</code> -&gt; <code>signature</code> as param of Signup.attemptWeb3WalletVerification()"]}>
+<Accordion titles={["<code>User.update({ password: &#39;x&#39; })</code> -&gt; <code>User.updatePassword(&#39;x&#39;)</code>", "<code>Clerk.experimental_canUseCaptcha</code> property removed", "<code>Clerk.experimental_captchaURL</code> property removed", "<code>Clerk.experimental_captchaSiteKey</code> property removed", "<code>Clerk.__unstable__invitationUpdate</code> removed", "<code>Clerk.__unstable__membershipUpdate</code> removed", "<code>redirect_url</code> -&gt; <code>redirectUrl</code> as param of <code>User.createExternalAccount</code>", "<code>generatedSignature</code> -&gt; <code>signature</code> as param of <code>Signup.attemptWeb3WalletVerification</code>"]}>
   <AccordionPanel>    
     If you are updating a user's password via the [`User.update` method](https://clerk.com/docs/references/javascript/user/user#update), it must be changed to [`User.updatePassword`](https://clerk.com/docs/references/javascript/user/password-management#update-password) instead. This method will require the current password as well as the desired new password. We made this update to improve the security of password changes. Example below:
     
@@ -427,7 +410,7 @@ As part of this major version, a number of previously deprecated props, arugment
   </AccordionPanel>
 </Accordion>
 
-### Other Breaking Changes
+#### Other Breaking Changes
 
 <Accordion titles={["<code>MagicLinkError</code> -&gt; <code>EmailLinkError</code>", "<code>isMagicLinkError</code> -&gt; <code>isEmailLinkError</code>", "<code>MagicLinkErrorCode</code> -&gt; <code>EmailLinkErrorCode</code>", "<code>useMagicLink</code> -&gt; <code>useEmailLink</code>", "<code>handleMagicLinkVerification</code> -&gt; <code>handleEmailLinkVerification</code>", "<code>ExternalAccount.avatarUrl</code> -&gt; <code>ExternalAccount.imageUrl</code>", "<code>[User|OrganizationMembershipPublicData].profileImageUrl</code> -&gt; <code>[User|OrganizationMembershipPublicData].imageUrl</code>", "<code>setSession</code> -&gt; <code>setActive</code>", "<code>Clerk.getOrganizationMemberships()</code> -&gt; <code>user.getOrganizationMemberships()</code>", "<code>lastOrganizationInvitation</code> and <code>lastOrganizationMember</code> dropped from event emitter", "<code>Organization.create(&#39;x&#39;)</code> -&gt; <code>Organization.create({ name: &#39;x&#39; })</code>", "<code>Organization.getPendingInvitations()</code> -&gt; <code>Organization.getInvitations({ status: &#39;pending&#39; })</code>", "<code>Clerk.redirectToHome()</code> removed", "<code>Clerk.isReady()</code> removed", "Replace <code>signOutCallback</code> prop on <code>SignOutButton</code> with <code>redirectUrl</code>"]}>
   <AccordionPanel>    
